--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -15,6 +15,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="New Text"
+            android:id="@+id/textView4"
+            android:layout_weight="1"
+            android:textColor="#000" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="New Text"
             android:id="@+id/textView7"
             android:layout_weight="1"
             android:textAlignment="center"
