--- a/app/src/main/res/menu/menu_logg.xml
+++ b/app/src/main/res/menu/menu_logg.xml
@@ -5,12 +5,12 @@
         android:orderInCategory="20" app:showAsAction="ifRoom" android:icon="@drawable/ic_launcher" >
 
     </item>
-    <item android:id="@+id/action_loggin" android:title="Log in"
+    <item android:id="@+id/action_loggin2" android:title="Log in"
         android:orderInCategory="100" app:showAsAction="never" >
         <menu xmlns:android="http://schemas.android.com/apk/res/android">
-            <item android:id="@+id/action_twitter" android:title="Twitter"
+            <item android:id="@+id/action_twitter2" android:title="Twitter"
                 android:orderInCategory="100" app:showAsAction="never" android:icon="@drawable/ic_launcher"/>
-            <item android:id="@+id/action_BBDD" android:title="BBDD"
+            <item android:id="@+id/action_BBDD2" android:title="BBDD"
                 android:orderInCategory="10" app:showAsAction="never" android:icon="@drawable/ic_launcher"/>
         </menu>
     </item>
