--- a/app/src/main/res/menu/menu_memory.xml
+++ b/app/src/main/res/menu/menu_memory.xml
@@ -2,6 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.alexandreortigosa.appfi.aplicacionfinal.MemoryActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_nuevojuego" android:title="Nuevo Juego"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
