--- a/app/src/main/res/layout/fragment_memory.xml
+++ b/app/src/main/res/layout/fragment_memory.xml
@@ -16,6 +16,29 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Intentos:"
+                android:id="@+id/textView5"
+                android:layout_weight="1"
+                android:gravity="center_vertical|right" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="0"
+                android:id="@+id/textView6"
+                android:layout_weight="1"
+                android:gravity="left|center_vertical" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -35,6 +58,12 @@
                 android:layout_height="match_parent"
                 android:text=""
                 android:id="@+id/button16"
+                android:layout_weight="1" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text=""
+                android:id="@+id/button26"
                 android:layout_weight="1" />
         </LinearLayout>
         <LinearLayout
@@ -63,6 +92,12 @@
                 android:text=""
                 android:id="@+id/button19"
                 android:layout_weight="1" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text=""
+                android:id="@+id/button27"
+                android:layout_weight="1" />
         </LinearLayout>
         <LinearLayout
             android:orientation="horizontal"
@@ -89,6 +124,12 @@
                 android:layout_height="match_parent"
                 android:text=""
                 android:id="@+id/button22"
+                android:layout_weight="1" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text=""
+                android:id="@+id/button28"
                 android:layout_weight="1" />
         </LinearLayout>
         <LinearLayout
@@ -117,7 +158,14 @@
                 android:text=""
                 android:id="@+id/button25"
                 android:layout_weight="1" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text=""
+                android:id="@+id/button29"
+                android:layout_weight="1" />
         </LinearLayout>
 
     </LinearLayout>
+
 </FrameLayout>
