--- a/app/src/main/res/layout/activity_accept_loggin.xml
+++ b/app/src/main/res/layout/activity_accept_loggin.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.alexandreortigosa.appfi.aplicacionfinal.AcceptLoggin"
-    android:background="#4cff00">
+    android:background="#A1934F">
 
     <LinearLayout
         android:orientation="vertical"
@@ -19,17 +19,21 @@
             android:layout_weight="1">
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Calculadora"
                 android:id="@+id/button10"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:layout_weight="1"
                 android:onClick="goToCalc"/>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Memory"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button11"
                 android:layout_weight="1"
                 android:onClick="goToMem"
@@ -43,17 +47,21 @@
             android:layout_weight="1">
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Player"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button12"
                 android:layout_weight="1"
                 android:onClick="goToPlayer"/>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Perfil"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button13"
                 android:layout_weight="1"
                 android:onClick="goToGPS"/>
