--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.alexandreortigosa.appfi.aplicacionfinal.CalcActivity">
+    tools:context="com.example.alexandreortigosa.appfi.aplicacionfinal.CalcActivity"
+    android:background="#A1934F">
 
     <LinearLayout
         android:orientation="vertical"
@@ -38,6 +39,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="1"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button1"
                 android:layout_weight="1" />
 
@@ -45,6 +48,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="2"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button2"
                 android:layout_weight="1" />
 
@@ -52,6 +57,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="3"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button3"
                 android:layout_weight="1" />
 
@@ -59,6 +66,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="+"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/buttonSum"
                 android:layout_weight="1" />
         </LinearLayout>
@@ -73,6 +82,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="4"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button4"
                 android:layout_weight="1" />
 
@@ -80,6 +91,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="5"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button5"
                 android:layout_weight="1" />
 
@@ -87,6 +100,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="6"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button6"
                 android:layout_weight="1" />
 
@@ -94,6 +109,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="-"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/buttonSub"
                 android:layout_weight="1" />
         </LinearLayout>
@@ -108,6 +125,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="7"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button7"
                 android:layout_weight="1" />
 
@@ -115,6 +134,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="8"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button8"
                 android:layout_weight="1" />
 
@@ -122,6 +143,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="9"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button9"
                 android:layout_weight="1" />
 
@@ -129,6 +152,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="*"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/buttonMul"
                 android:layout_weight="1" />
         </LinearLayout>
@@ -143,6 +168,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="C"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/buttonClear"
                 android:layout_weight="1" />
 
@@ -150,6 +177,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="0"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/button0"
                 android:layout_weight="1" />
 
@@ -157,6 +186,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="="
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/buttonDot"
                 android:layout_weight="1" />
 
@@ -164,6 +195,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="/"
+                android:background="@drawable/red_buttn"
+                style="@style/button_text"
                 android:id="@+id/buttonDiv"
                 android:layout_weight="1" />
         </LinearLayout>
