--- a/app/src/main/res/layout/fragment_memory.xml
+++ b/app/src/main/res/layout/fragment_memory.xml
@@ -1,7 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alexandreortigosa.appfi.aplicacionfinal.Memory">
+    tools:context="com.example.alexandreortigosa.appfi.aplicacionfinal.Memory"
+    android:background="#A1934F">
 
     <!-- TODO: Update blank fragment layout -->
 
