--- a/app/src/main/res/layout/fragment_ranking_mem.xml
+++ b/app/src/main/res/layout/fragment_ranking_mem.xml
@@ -4,7 +4,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" android:orientation="vertical"
         android:padding="5dp" android:gravity="center_horizontal"
-        android:id="@+id/CustomTable">
+        android:id="@+id/CustomTable"
+        android:background="#A1934F">
     <!-- TODO: Update blank fragment layout -->
 
 
