--- a/app/src/main/res/layout/activity_logg.xml
+++ b/app/src/main/res/layout/activity_logg.xml
@@ -97,13 +97,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <Button
-                android:background="@drawable/red_buttn"
-                style="@style/button_text"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:text="New Button"
-                android:id="@+id/button3" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/imageView2" />
         </FrameLayout>
 
     </LinearLayout>
