--- a/app/src/main/res/layout/activity_decline_loggin.xml
+++ b/app/src/main/res/layout/activity_decline_loggin.xml
@@ -4,11 +4,29 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.alexandreortigosa.appfi.aplicacionfinal.DeclineLoggin">
+    tools:context="com.example.alexandreortigosa.appfi.aplicacionfinal.DeclineLoggin"
+    android:background="#A1934F">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ff0000"></LinearLayout>
+       >
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView3"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:src="@drawable/iwantyou" />
+
+        <Button
+            android:background="@drawable/red_buttn"
+            android:layout_width="match_parent"
+            android:layout_height="131dp"
+            style="@style/button_text"
+            android:text="Vuelve a intentarlo"
+            android:id="@+id/button32" />
+    </LinearLayout>
 </RelativeLayout>
